syntax = "proto3";

message Void {}

enum ArgumentType {
  STRING = 0;
  INT = 1;
  FLOAT = 2;
  BOOL = 3;
  WRITER = 4;
  READER = 5;
}

message Processor {
  string uri = 1;
  map<string, ArgumentType> arguments = 2;
  map<string, string> metadata = 3;
}

message Argument {
  ArgumentType type = 1;
  bytes value = 2;
}

message Stage {
  string uri = 1;
  string processor_uri = 2;
  map<string, Argument> arguments = 3;
}

message Payload {
  string channel_uri = 1;
  bytes data = 2;
}

service Runner {
  rpc prepareProcessor(Processor) returns (Void);
  rpc prepareStage(Stage) returns (Void);
  rpc exec(Void) returns (Void);
  rpc channel(stream Payload) returns (stream Payload);
}
